--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "articlyzer-ui",
   "version": "0.1.0",
   "dependencies": {
-    "bootstrap": "^5.2.3",
+    "axios": "^1.3.5",
+    "bootstrap": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
